# order-analytics-desktop-app

./: .gitignore
.github/workflows/: build-desktop.yml
OrderAnalyticsDesktopApp/: Launch Order Analytics.cmd  Launch Order Analytics.command  README.md  README.txt  build_desktop.py  pyproject.toml
OrderAnalyticsDesktopApp/app/assets/web-template/: app.js  index.html  styles.css
OrderAnalyticsDesktopApp/app/scripts/: build_report.py  order_analysis_core.py  run_service.py
OrderAnalyticsDesktopApp/client/: main.js  package-lock.json  package.json
OrderAnalyticsDesktopApp/client/scripts/: after-pack.js
OrderAnalyticsDesktopApp/tests/: test_order_analysis_core.py
